# cell-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  config.dox
data/resources/shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  main.cpp  typedefs.h
src/cell-common/: CMakeLists.txt
src/cell-common/util/: log.cpp  log.h  timehelper.cpp  timehelper.h
src/cell-simulation/: CMakeLists.txt  main.cpp  mathutils.cpp  mathutils.h
src/cell-simulation/core/: camera.cpp  camera.h  client.cpp  client.h  config.cpp  config.h  console.cpp  console.h  content.cpp  content.h  engine.cpp  engine.h
src/cell-simulation/irc/: ircbot.cpp  ircbot.h
src/cell-simulation/irc/message/: message.cpp  message.h  outmessage.h
src/cell-simulation/simulation/: cell.cpp  cell.h  entity.cpp  entity.h  fire.cpp  fire.h  food.cpp  food.h  neuralnetwork.cpp  neuralnetwork.h  randomgen.cpp  randomgen.h  resource.cpp  resource.h  water.cpp  world.cpp  world.h
src/cell-simulation/simulation/genetics/: breeder.cpp  breeder.h  dna.cpp  dna.h  genome.cpp  genome.h  traits.cpp  traits.h
src/cell-simulation/simulation/partitioning/: hashnode.cpp  hashnode.h  hashutils.cpp  hashutils.h  spatialhash.cpp  spatialhash.h
src/core/: camera.cpp  camera.h  client.cpp  client.h  config.h  console.cpp  console.h  content.h  engine.cpp  engine.h
src/simulation/: cell.cpp  cell.h  entity.cpp  entity.h  food.cpp  food.h  neuralnetwork.cpp  neuralnetwork.h  resource.cpp  resource.h  water.cpp  water.h  world.cpp  world.h
src/simulation/genetics/: breeder.cpp  breeder.h  genome.cpp  genome.h
src/simulation/partitioning/: hashnode.cpp  hashnode.h  hashutils.cpp  spatialhash.cpp  spatialhash.h
src/util/: log.cpp  log.h  mathutils.cpp
